--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="manifest.json" />
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
-    <title>App</title>
+    <title>Inventory</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
